--- a/POO/POO.csproj
+++ b/POO/POO.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Abstracao\Abs.cs" />
+    </ItemGroup>
+
 </Project>
